<resources>
    <string name="app_name">Service Station (Customer)</string>
    <string name="Title">Add your services</string>


    <string name="vehicleNo_txt">Enter your vehicle number...</string>
    <string name="ServiceLable">" Service"</string>
    <string name="enterName">EnterName</string>
    <string name="VehicleText">Vehicle Type</string>


    <string name="Tp">Telephone No</string>

    <string name="addServiceButton">OK</string>
    <string name="ServiceNameLable">Service Name</string>
    <string name="ServiceTypeLable">Service Type</string>
    <string name="OKBUTTON">OK</string>
    <string name="EmlpoyeeNOTextView">Amount Of Employees</string>
    <string name="PriceText">Needed Price</string>
    <string name="name_label">Customer Name</string>
    <string name="vehicleNo_label">Vehicle Number</string>
    <string name="insertTextView">Insert Successfully !!</string>
    <string name="YourServiceTextview">Your Services</string>
    <string name="LogInBtnSpashScreen">Login</string>
    <string name="Signupbtn">Sign Up</string>
    <string name="Vehicletext">The Vehicle Station Service App</string>
    <string name="SignInbtn">Sign In</string>
    <string name="Loginbtn">Login</string>
    <string name="DashboardText">DASHBOARD</string>
    <string name="AddServicebtn">" Service"</string>
    <string name="AddItemBtn">" Add Item"</string>
    <string name="Updatebtn">Edit Service</string>
    <string name="updateServiceview">Edit Service</string>
    <string name="viewbtn">View All</string>
    <string name="upbtn">Update</string>
    <string name="dltbtn">Delete</string>
    <string name="id">ID</string>
    <string name="Addcustomer">" Customer"</string>
    <string name="name_txt" translatable="false">Enter your name</string>
    <string name="mobile_label">Mobile Number</string>


    <string name="mobile_txt">Enter your Mobile Number</string>
    <string name="add_service_title">Update Your Services</string>
    <string name="after_service_cust_title">Add your service</string>
    <string name="confirm_btn">ADD</string>
    <string name="payment_label">payment</string>
    <string name="service">Add your Service</string>
    <string name="update">UPDATE</string>

    <string name="update_progress_btn">CHANGE</string>
    <string name="select_service">Select your service</string>
    <string name="service_successful">Your service request was successful !!!!</string>

    <string name="update_service_title">Update your services</string>
    <string name="buttonadd">CONFIRM</string>
    <string name="view_btn">VIEW</string>
    <string name="id_label">ID</string>
    <string name="btn_delete">DELETE</string>
    <string name="select_services">SELECT SERVICE</string>
    <string-array name="planets_array">
        <item>Vehicle Wash</item>
        <item>Interior and Exterior Detailing</item>
        <item>Full Service</item>
        <item>Hybrid services</item>
        <item>Wheel Alignment</item>


    </string-array>
    <string-array name="EmplyeesNO">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>


    </string-array>


</resources>
